--- a/src/components/textarea/textarea.less
+++ b/src/components/textarea/textarea.less
@@ -6,6 +6,7 @@
   box-shadow: @input-shadow;
   position: relative;
   width: 100%;
+  font-size: 13px;
   color: #131313;
   -webkit-appearance: none;
   background-color: #fff;
