--- a/docs/src/index.less
+++ b/docs/src/index.less
@@ -1,11 +1,39 @@
-body, h1, h2, h3, h4, h5 {
-  margin: 0px;
+// @tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+blockquote,
+dl,
+dd,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hr,
+figure,
+p,
+pre {
+  margin: 0;
+}
+
+html {
+  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 h1 {
   font-size: 38px;
+  @apply font-bold;
   margin-bottom: 32px;
   line-height: 38px;
+}
+
+h2 {
+  font-size: 1.2em;
+  @apply font-bold;
 }
 
 .margins > * + * {
