colorpicker, colorpicker docs, taiwlind css for docs

--- a/docs/src/index.less
+++ b/docs/src/index.less
@@ -23,6 +23,8 @@ html {
   font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
     Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
   -webkit-font-smoothing: antialiased;
+}
+
 h5 {
   margin: 0px;
 }
