ADD: customize eslint & stylelint & prettier

--- a/docs/src/index.less
+++ b/docs/src/index.less
@@ -32,10 +32,21 @@ Original Base16 color scheme by Chris Kempson (https://github.com/chriskempson/b
 */
 code[class*='language-'],
 pre[class*='language-'] {
-  font-family: Consolas, Menlo, Monaco, 'Andale Mono WT', 'Andale Mono',
-    'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono',
-    'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L',
-    'Courier New', Courier, monospace;
+  font-family:
+    Consolas,
+    Menlo,
+    Monaco,
+    'Andale Mono WT',
+    'Andale Mono',
+    'Lucida Console',
+    'Lucida Sans Typewriter',
+    'DejaVu Sans Mono',
+    'Bitstream Vera Sans Mono',
+    'Liberation Mono',
+    'Nimbus Mono L',
+    'Courier New',
+    Courier,
+    monospace;
   font-size: 14px;
   line-height: 1.375;
   direction: ltr;
@@ -192,14 +203,16 @@ pre > code.highlight {
 
 .line-highlight {
   background: rgba(21, 21, 21, 0.2) !important;
-  background: -webkit-linear-gradient(
-    left,
-    rgba(21, 21, 21, 0.2) 70%,
-    rgba(21, 21, 21, 0)
-  ) !important;
-  background: linear-gradient(
-    to right,
-    rgba(21, 21, 21, 0.2) 70%,
-    rgba(21, 21, 21, 0)
-  ) !important;
+  background:
+    -webkit-linear-gradient(
+      left,
+      rgba(21, 21, 21, 0.2) 70%,
+      rgba(21, 21, 21, 0)
+    ) !important;
+  background:
+    linear-gradient(
+      to right,
+      rgba(21, 21, 21, 0.2) 70%,
+      rgba(21, 21, 21, 0)
+    ) !important;
 }
