--- a/src/components/input/input.less
+++ b/src/components/input/input.less
@@ -43,7 +43,8 @@
 
   &:focus-within {
     border: 1px solid @color-primary;
-    box-shadow: 0 2px 4px fade(@color-primary, 40%),
+    box-shadow:
+      0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
 
     &:hover {
@@ -92,8 +93,17 @@
   box-sizing: border-box;
   outline: none;
   border: none;
-  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+  font-family:
+    Inter,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Helvetica Neue,
+    Arial,
+    Noto Sans,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
   padding: 4px 10px;
   background: transparent;
