--- a/src/components/numberinput/numberinput.less
+++ b/src/components/numberinput/numberinput.less
@@ -36,7 +36,8 @@
 
   &:focus-within {
     border: 1px solid @color-primary;
-    box-shadow: 0 2px 4px fade(@color-primary, 40%),
+    box-shadow:
+      0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
 
     &:hover {
@@ -62,8 +63,17 @@
     line-height: 1.5;
     border: none;
     box-sizing: border-box;
-    font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
-      Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+    font-family:
+      Inter,
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      Segoe UI,
+      Roboto,
+      Helvetica Neue,
+      Arial,
+      Noto Sans,
+      sans-serif;
     -webkit-font-smoothing: antialiased;
 
     &:focus {
