--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -98,7 +98,8 @@
 
   &:focus:not(&--disabled) {
     border-color: @color-primary;
-    box-shadow: 0 2px 4px fade(@color-primary, 40%),
+    box-shadow:
+      0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
   }
 }
