--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -31,8 +31,17 @@
 @import '../components/tooltip/tooltip.less';
 
 html {
-  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+  font-family:
+    Inter,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Helvetica Neue,
+    Arial,
+    Noto Sans,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
 }
 
