--- a/src/components/drawer/drawer.less
+++ b/src/components/drawer/drawer.less
@@ -32,7 +32,9 @@
     height: calc(100% - 40px);
     transition-delay: 0.1s;
     z-index: 99999;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.07), 0 7px 14px rgba(50, 50, 93, 0.1),
+    box-shadow:
+      0 3px 6px rgba(0, 0, 0, 0.07),
+      0 7px 14px rgba(50, 50, 93, 0.1),
       0 0 0 1px rgba(50, 50, 93, 0.05);
 
     &--right {
