--- a/src/components/textarea/textarea.less
+++ b/src/components/textarea/textarea.less
@@ -13,8 +13,17 @@
   border-radius: @border-radius-base;
   box-sizing: border-box;
   transition: all 0.2s;
-  font-family: Inter, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif;
+  font-family:
+    Inter,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Helvetica Neue,
+    Arial,
+    Noto Sans,
+    sans-serif;
   -webkit-font-smoothing: antialiased;
 
   &:hover {
@@ -32,7 +41,8 @@
   &:focus {
     border: 1px solid @color-primary;
     outline: none;
-    box-shadow: 0 2px 4px fade(@color-primary, 40%),
+    box-shadow:
+      0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
 
     &:hover {
