--- a/src/styles/helpers.less
+++ b/src/styles/helpers.less
@@ -8,7 +8,9 @@
 
   &:hover {
     border: 1px solid #fff;
-    box-shadow: 0 0 0 1px rgba(50, 50, 93, 0.05),
-      0 7px 14px 0 rgba(50, 50, 93, 0.1), 0 3px 6px 0 rgba(0, 0, 0, 0.07);
+    box-shadow:
+      0 0 0 1px rgba(50, 50, 93, 0.05),
+      0 7px 14px 0 rgba(50, 50, 93, 0.1),
+      0 3px 6px 0 rgba(0, 0, 0, 0.07);
   }
 }
