--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -3,7 +3,7 @@
 @import 'helpers.less';
 @import '../components/alert/styles.less';
 @import '../components/avatar/avatar.less';
-@import '../components/badge/badge.less';
+@import '../components/badge/styles.less';
 // @import '../components/breadcrumbs/breadcrumbs.less';
 @import '../components/button/button.less';
 @import '../components/checkbox/checkbox.less';
