--- a/src/components/select/styles.less
+++ b/src/components/select/styles.less
@@ -1,18 +1,24 @@
 @import '../../styles/variables.less';
 
 @select-option-hover: #f4f5f7;
+@dropdown-offset: 6px;
+@dropdown-z-index: 50;
 
 .it-select {
   display: inline-block;
-  position: relative;
   min-width: 100px;
+
+  &-inner {
+    position: relative;
+  }
 
   &-input {
     padding: 0;
     display: inline-block;
     width: auto;
     height: 100%;
-    font-size: 12px;
+    font-size: 14px;
+    line-height: 1.2;
     box-sizing: border-box;
     outline: none;
     border: none;
@@ -98,8 +104,7 @@
 
   &:focus:not(&--disabled) {
     border-color: @color-primary;
-    box-shadow:
-      0 2px 4px fade(@color-primary, 40%),
+    box-shadow: 0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
   }
 }
@@ -123,22 +128,61 @@
 }
 
 .it-select-arrow {
-  // position: absolute;
-  // top: 8px;
-  // right: 6.5px;
   margin-left: 12px;
   color: @color-black;
-  font-size: @default-text-size+2;
+  font-size: @default-text-size + 2;
   transition: transform 0.27s;
 }
 
 .it-select-dropdown {
-  margin-top: 6px;
   position: absolute;
-  z-index: 9000;
+  z-index: @dropdown-z-index;
 
   &--divided .it-select-option:not(:first-child) {
     border-top: 1px solid @color-default-border;
+  }
+
+  &--bottom,
+  &--top {
+    &-left {
+      right: calc(100% + @dropdown-offset);
+    }
+
+    &-right {
+      left: calc(100% + @dropdown-offset);
+    }
+  }
+
+  &--bottom {
+    top: calc(100% + @dropdown-offset);
+
+    &-left,
+    &-right {
+      top: 0;
+    }
+  }
+
+  &--top {
+    bottom: calc(100% + @dropdown-offset);
+
+    &-left,
+    &-right {
+      bottom: 0;
+    }
+  }
+
+  &--left,
+  &--right {
+    top: 50%;
+    transform: translate(0, -50%);
+  }
+
+  &--left {
+    right: calc(100% + @dropdown-offset);
+  }
+
+  &--right {
+    left: calc(100% + @dropdown-offset);
   }
 }
 
@@ -158,6 +202,23 @@
   background-color: #fff;
   word-wrap: break-word;
   user-select: none;
+
+  &::-webkit-scrollbar {
+    width: 4px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: lighten(@color-primary, 10%);
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: @color-primary;
+  }
 }
 
 .it-select-option {
@@ -182,10 +243,6 @@
   &--focused {
     background: @select-option-hover;
   }
-
-  // &--divided {
-  //   border-top: 0.6px solid @color-secondary-text;
-  // }
 
   &--disabled {
     color: @color-disabled-border;
