--- a/src/components/select/styles.less
+++ b/src/components/select/styles.less
@@ -104,7 +104,8 @@
 
   &:focus:not(&--disabled) {
     border-color: @color-primary;
-    box-shadow: 0 2px 4px fade(@color-primary, 40%),
+    box-shadow:
+      0 2px 4px fade(@color-primary, 40%),
       0 0 0 3px fade(@color-primary, 20%);
   }
 }
