--- a/src/components/select/styles.less
+++ b/src/components/select/styles.less
@@ -138,6 +138,8 @@
 .it-select-dropdown {
   position: absolute;
   z-index: @dropdown-z-index;
+  min-width: calc(100% + 30px);
+  width: 100%;
 
   &--divided .it-select-option:not(:first-child) {
     border-top: 1px solid @color-default-border;
@@ -190,11 +192,10 @@
 .it-select-list {
   box-shadow: @popup-shadow;
   border-radius: @border-radius-base;
-  min-width: 130px;
+  width: 100%;
   max-height: 200px;
   position: relative;
   font-size: 13px;
-  width: inherit;
   overflow-y: auto;
   padding: 4px 0;
   margin: 0;
@@ -224,7 +225,7 @@
 
 .it-select-option {
   position: relative;
-  padding: 10px 12px;
+  padding: 10px 24px 10px 12px;
   display: block;
   overflow: hidden;
   line-height: 1;
