--- a/src/components/switch/switch.less
+++ b/src/components/switch/switch.less
@@ -129,6 +129,7 @@
   }
 
   &-label {
+    cursor: pointer;
     transition: all 0.2s ease-out;
     white-space: pre-wrap;
     line-height: 1.3;
@@ -160,6 +161,7 @@
     }
 
     &--disabled {
+      cursor: not-allowed;
       color: @color-disabled-border;
     }
   }
