--- a/src/components/checkbox/checkbox.less
+++ b/src/components/checkbox/checkbox.less
@@ -115,7 +115,7 @@
   white-space: nowrap;
   border-radius: 2px;
   font-size: 0;
-  z-index: 1;
+  // z-index: 1;
   overflow: hidden;
   user-select: none;
   transition: all 0.1s;
