--- a/src/components/drawer/drawer.less
+++ b/src/components/drawer/drawer.less
@@ -15,7 +15,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.45);
-    z-index: 99995;
+    // z-index: 99995;
     overflow: hidden;
     // margin: 0 !important;
     // padding: 16px;
@@ -31,11 +31,11 @@
     overflow: auto;
     height: calc(100% - 40px);
     transition-delay: 0.1s;
-    z-index: 99999;
-    box-shadow:
-      0 3px 6px rgba(0, 0, 0, 0.07),
-      0 7px 14px rgba(50, 50, 93, 0.1),
+    // z-index: 99999;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.07), 0 7px 14px rgba(50, 50, 93, 0.1),
       0 0 0 1px rgba(50, 50, 93, 0.05);
+
+    transition: transform 0.2s ease-in-out;
 
     &--right {
       top: 20px;
