--- a/src/components/modal/modal.less
+++ b/src/components/modal/modal.less
@@ -38,6 +38,7 @@
     cursor: default;
     display: table;
     width: 100%;
+    transition: transform 0.2s ease-in-out;
 
     > img {
       max-width: 100%;
