Add fixed prop to ItDrawer

--- a/src/components/drawer/drawer.less
+++ b/src/components/drawer/drawer.less
@@ -41,11 +41,25 @@
       top: 20px;
       right: 20px;
       // height: 100%;
+
+      &--fixed {
+         height: 100%;
+         border-radius: 0;
+         top: 0;
+         right: 0;
+      }
     }
 
     &--left {
       top: 20px;
       left: 20px;
+
+      &--fixed {
+         height: 100%;
+         border-radius: 0;
+         top: 0;
+         left: 0;
+      }
     }
   }
 }
