--- a/src/components/slider/styles.less
+++ b/src/components/slider/styles.less
@@ -78,15 +78,15 @@
     box-shadow: 0 1px 1px rgba(0, 0, 0, 0.2), 0 2px 2px rgba(0, 0, 0, 0.12);
     border-radius: 2px;
     transition: all 0.2s;
-    width: 9px;
-    height: 19px;
+    // width: 9px;
+    // height: 19px;
 
     &-wrapper {
       position: absolute;
       top: 50%;
       transform: translate(-50%, -50%);
       line-height: 1;
-      z-index: 99;
+      z-index: 2;
       background-color: transparent;
       user-select: none;
       cursor: ew-resize;
