--- a/src/components/progressbar/progressbar.less
+++ b/src/components/progressbar/progressbar.less
@@ -5,10 +5,7 @@
     width: 20%;
     margin-left: -20%;
   }
-  // 50% {
-  //   width: 50%;
-  //   margin-left: 20%;
-  // }
+
   100% {
     width: 40%;
     margin-left: 100%;
@@ -27,6 +24,7 @@
 .it-progress-bar {
   background-color: @color-disabled-bg;
   border-radius: 4px;
+  height: 7px;
   width: 100%;
 
   &--infinite {
@@ -40,7 +38,7 @@
 
 .it-progress-line {
   background-color: @color-primary;
-  transition: all 0.2s ease-out;
+  // transition: all 0.2s ease-out;
   border-radius: 4px;
   height: 100%;
   position: relative;
