--- a/src/components/loadingbar/loadingbar.less
+++ b/src/components/loadingbar/loadingbar.less
@@ -1,7 +1,7 @@
 @import '../../styles/variables.less';
 
 .it-loadingbar {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   z-index: 999999;
