--- a/src/components/colorpicker/colorpicker.less
+++ b/src/components/colorpicker/colorpicker.less
@@ -10,7 +10,7 @@
 
 .it-colorpicker-saturation-wrap {
   width: 100%;
-  padding-bottom: 75%;
+  // padding-bottom: 75%;
   position: relative;
 }
 
@@ -122,23 +122,9 @@
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 5%);
 }
 
-.it-hue--horizontal {
-  background:
-    linear-gradient(
-      to right,
-      #f00 0%,
-      #ff0 17%,
-      #0f0 33%,
-      #0ff 50%,
-      #00f 67%,
-      #f0f 83%,
-      #f00 100%
-    );
-}
-
 .it-hue-container {
   cursor: pointer;
-  margin: 0 6px;
+  padding: 0 6px;
   position: relative;
   height: 100%;
 }
