--- a/src/components/tooltip/tooltip.less
+++ b/src/components/tooltip/tooltip.less
@@ -1,7 +1,7 @@
 @import '../../styles/variables.less';
 
 .it-tooltip {
-  display: inline-block;
+  // display: inline-block;
   // z-index: 9;
 
   &-trigger {
