--- a/newdocs/assets/index.css
+++ b/newdocs/assets/index.css
@@ -12,6 +12,49 @@
   background: rgba(125, 211, 252, 0.15);
 }
 
+.fancybox {
+  position: absolute;
+  inset: 0px;
+  height: 100%;
+  z-index: -2;
+  border-radius: 6px;
+  width: 100%;
+  background-image: linear-gradient(
+    130deg,
+    rgb(255, 61, 116),
+    rgb(249, 33, 149),
+    rgb(227, 34, 188),
+    rgb(181, 94, 230),
+    rgb(118, 128, 252),
+    rgb(0, 150, 255),
+    rgb(0, 183, 255),
+    rgb(0, 208, 242),
+    rgb(0, 227, 184),
+    rgb(70, 239, 111)
+  );
+
+  background-size: 200% 200%;
+  animation: fancy 2s ease-out infinite;
+}
+
+.fancy-shadow {
+  border: 1px solid #fff;
+  box-shadow: 0 0 0 1px #32325d0d, 0 7px 14px #32325d05, 0 3px 6px #0000000d;
+}
+
+@keyframes fancy {
+  0%,
+  100% {
+    background-position: 0% 50%;
+    filter: blur(3px);
+  }
+
+  50% {
+    background-position: 100% 50%;
+    filter: blur(6px);
+  }
+}
+
 .scrollbar::-webkit-scrollbar {
   width: 14px;
   height: 16px;
