--- a/newdocs/assets/index.css
+++ b/newdocs/assets/index.css
@@ -81,13 +81,28 @@
   background: #a0aec0;
 }
 
+/* Track */
+.scrollbar-dark::-webkit-scrollbar-track {
+  background: black !important;
+}
+
+/* Handle */
+.scrollbar-dark::-webkit-scrollbar-thumb {
+  background: red !important;
+  border: 3px solid #edf2f7;
+}
+
+/* Handle on hover */
+.scrollbar-dark::-webkit-scrollbar-thumb:hover {
+  background: #a0aec0;
+}
+
 /**
  * Dracula Theme originally by Zeno Rocha [@zenorocha]
  * https://draculatheme.com/
  *
  * Ported for PrismJS by Albert Vallverdu [@byverdu]
  */
-
 code[class*='language-'],
 pre[class*='language-'] {
   font-size: 14px;
